@@ -1,5 +1,6 @@
 2.3.1 (Jun , 2019)
  - Merged controllers for web admin dashboard.
+ - Added label in Sync Dashboard to indicate on which mode it started (Synchronizer or Proxy).
 2.3.0 (May 30, 2019)
  - Added support for track properties
  - Added cache overlay on top of redis for fetching events
